# mouflon

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html  mouflon.ts
.github/workflows/: rust.yml
src/: browser.rs  main.rs  model.rs
src/config/: keycloak.rs  mod.rs  read_configs.rs
src/token/: cache.rs  mod.rs  oauth2.rs  openid_configuration.rs  pkce.rs  receive_code.rs  valid.rs
