[package]
name = "mouflon"
version = "0.1.0"
authors = ["Elmar Athmer <elmar@athmer.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13.9"
tokio = { version = "0.2", features = ["full"] }
url = "2.2.0"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.60"
directories-next = "2.0.0"
